# ai-automation-engineer-portfolio

./: .gitignore  AGENTS.MD  README.md
01-ai-marketing-ops-agent/: .env.example  AGENTS.md  Dockerfile.mock  README.md  compose.yaml  pyproject.toml
01-ai-marketing-ops-agent/docs/: ARCHITECTURE.md  DECISIONS.md  RUNBOOK.md
01-ai-marketing-ops-agent/reports/: daily-marketing-report-20260602T111610Z.md
01-ai-marketing-ops-agent/scripts/: clean_runtime.sh  run_checks.sh  run_ci_locally.sh  run_workflow.sh  run_workflow_with_llm.sh  start_services.sh
01-ai-marketing-ops-agent/src/marketing_ops_agent/: __init__.py  config.py  models.py
01-ai-marketing-ops-agent/tests/: test_models.py  test_rate_limiter.py  test_retry.py
01-ai-marketing-ops-agent/tests/aggregation/: test_campaign_aggregator.py
01-ai-marketing-ops-agent/tests/anomaly/: test_anomaly_detector.py
01-ai-marketing-ops-agent/tests/approval/: test_approval_flow.py
01-ai-marketing-ops-agent/tests/browser/: test_panel_scraper.py
01-ai-marketing-ops-agent/tests/clients/: test_analytics_client.py  test_campaign_client.py  test_project_management_client.py
01-ai-marketing-ops-agent/tests/llm/: test_interpreter.py
01-ai-marketing-ops-agent/tests/mock_services/: test_analytics_graphql_api.py  test_campaign_api.py  test_marketing_panel.py  test_project_management_api.py
01-ai-marketing-ops-agent/tests/notifications/: test_notifications.py
01-ai-marketing-ops-agent/tests/observability/: test_run_recorder.py
01-ai-marketing-ops-agent/tests/reporting/: test_markdown_report.py
01-ai-marketing-ops-agent/tests/workflows/: test_daily_marketing_report.py
02-agent-toolkit-mcp/mcp-server/: README.md  pyproject.toml
02-agent-toolkit-mcp/mcp-server/tests/: conftest.py  test_cli.py  test_tools.py
03-agentops-control-tower/: AGENTS.md  README.md  pyproject.toml
03-agentops-control-tower/docs/: ARCHITECTURE.md  DATA_SOURCES.md  LOCAL_DEMO_PLAN.md  OBSERVABILITY_MODEL.md  ROADMAP.md  SAFETY_MODEL.md
03-agentops-control-tower/docs/prompt-history/: README.md  TEMPLATE.md  milestone-01-scaffold.md  milestone-02-ingestion-models.md  milestone-03-summaries-timeline.md  milestone-04-cli-report-export.md  milestone-05-static-html-report.md
03-agentops-control-tower/examples/: README.md
03-agentops-control-tower/examples/project-1-run-history/: README.md
03-agentops-control-tower/examples/project-2-tool-evidence/: README.md
03-agentops-control-tower/scripts/: demo_dataset.sh  run_checks.sh  run_cli_demo.sh  run_html_report_demo.sh  run_ingestion_demo.sh  run_reviewer_demo.sh  run_summary_demo.sh
03-agentops-control-tower/tests/: test_cli.py  test_html_reporting.py  test_ingestion.py  test_reporting.py  test_summaries_timeline.py
(+177 files in other folders)
