[project]
name = "ai-marketing-ops-agent"
version = "0.1.0"
description = "Production-oriented AI marketing operations automation scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27",
    "playwright>=1.45,<2",
    "pydantic>=2.7,<3",
    "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_ops_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["marketing_ops_agent"]
