[project]
name = "agentops-control-tower"
version = "0.1.0"
description = "Local AgentOps observability ingestion layer for AI automation workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentops_control_tower"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agentops_control_tower"]
