[project]
name = "agent-toolkit-mcp"
version = "0.1.0"
description = "Deterministic local MCP tool layer for the AI Automation Engineer portfolio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_toolkit_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_toolkit_mcp"]
